plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

repositories {
	maven { url "https://maven.uku3lig.net/releases" }
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"flingo-tagger" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.officialMojangMappings()
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	modClientImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	modImplementation "net.uku3lig:ukulib:${project.ukulib_version}"
	include "net.uku3lig:ukulib:${project.ukulib_version}"

	compileOnly "org.projectlombok:lombok:1.18.36"
	annotationProcessor "org.projectlombok:lombok:1.18.36"
	clientAnnotationProcessor "org.projectlombok:lombok:1.18.36"
	modClientImplementation fabricApi.module("fabric-command-api-v2", project.fabric_api_version)
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
	it.options.compilerArgs += ["--enable-preview"]
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21

	toolchain.languageVersion = JavaLanguageVersion.of(21)
}

jar {
	inputs.property "projectName", project.name

	from("LICENSE") {
		rename { "${it}_${project.name}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}